--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
     <version>1-incubating</version>
   </parent>
   <artifactId>fluo-recipes</artifactId>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.0.0-incubating-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>Apache Fluo Recipes Parent</name>
+  <name>Apache Fluo (incubating) Recipes Parent</name>
   <description>Implementation of Common Fluo patterns</description>
   <licenses>
     <license>
@@ -39,20 +39,20 @@
     <module>modules/test</module>
   </modules>
   <scm>
-    <connection>scm:git:https://gitbox.apache.org/repos/asf/fluo-recipes.git</connection>
-    <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/fluo-recipes.git</developerConnection>
+    <connection>scm:git:https://git-wip-us.apache.org/repos/asf/incubator-fluo-recipes.git</connection>
+    <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/incubator-fluo-recipes.git</developerConnection>
     <tag>HEAD</tag>
-    <url>https://gitbox.apache.org/repos/asf/fluo-recipes.git</url>
+    <url>https://git-wip-us.apache.org/repos/asf/incubator-fluo-recipes.git</url>
   </scm>
   <issueManagement>
     <system>GitHub</system>
-    <url>https://github.com/apache/fluo-recipes/issues</url>
+    <url>https://github.com/apache/incubator-fluo-recipes/issues</url>
   </issueManagement>
   <properties>
     <accumulo.version>1.6.6</accumulo.version>
     <curator.version>2.7.1</curator.version>
     <findbugs.maxRank>13</findbugs.maxRank>
-    <fluo.version>1.1.0-incubating</fluo.version>
+    <fluo.version>1.0.0-incubating</fluo.version>
     <hadoop.version>2.6.3</hadoop.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -239,18 +239,6 @@
             </systemPropertyVariables>
           </configuration>
         </plugin>
-        <plugin>
-          <groupId>net.revelc.code</groupId>
-          <artifactId>impsort-maven-plugin</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <groups>java.,javax.</groups>
-            <staticAfter>true</staticAfter>
-            <excludes>
-              <exclude>**/thrift/*.java</exclude>
-            </excludes>
-          </configuration>
-        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
@@ -307,24 +295,7 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>net.revelc.code</groupId>
-        <artifactId>impsort-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>sort-imports</id>
-            <goals>
-              <goal>sort</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
     <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19</version>
-            </plugin>
-            <plugin>
                 <groupId>org.ekstazi</groupId>
                 <artifactId>ekstazi-maven-plugin</artifactId>
                 <version>4.6.3</version>
